Refactor Val.Array
