# api/src/main/scala/org/alephium/api/ApiModel.scala
@@ -359,7 +359,7 @@ trait ApiModelCodec {
   implicit val valI256RW: RW[Val.I256]       = macroRW
   implicit val valAddressRW: RW[Val.Address] = macroRW
   implicit val valByteVecRW: RW[Val.ByteVec] = macroRW
-  implicit val valArrayRW: RW[Val.Array]     = macroRW
+  implicit val valArrayRW: RW[Val.ValArray]  = macroRW
   implicit val valRW: RW[Val] = RW.merge(
     valBoolRW,
     valU256RW,
